# monte-cardo

./: .gitignore  Cargo.toml  README.md  config.py  consts.py  dataset.py  model_training.ipynb  models.py  perf.data  pyproject.toml  train.py  ui_example.py  ui_examples.py  ui_heavy_bar.txt
.github/workflows/: pages.yml
benches/: world_generation.rs
crates/monte-cardo-cli/: Cargo.toml
crates/monte-cardo-core/: Cargo.toml
crates/monte-cardo-core/benches/: simple_valid.rs  sparsity_cells.rs  world_generation.rs
crates/monte-cardo-core/src/: consts.rs  debug.rs  game.rs  lib.rs  main.rs  network.rs  puct.rs
crates/monte-cardo-core/src/eval/: actions.rs  config.rs  evaluate.rs  mod.rs  naive.rs  network.rs  normalize.rs  puct.rs  training.rs  zobrist.rs
crates/monte-cardo-core/src/game/: actions.rs  collections.rs  mod.rs  primitives.rs  rules.rs  state.rs
crates/monte-cardo-core/src/ml/: batching.rs  mod.rs  network.rs  training.rs
crates/monte-cardo-core/src/world/: dealing.rs  mixing.rs  mod.rs  simple.rs  sparsity.rs  stars_and_bars.rs
crates/monte-cardo-python/: Cargo.toml
crates/monte-cardo-python/src/: lib.rs
crates/monte-cardo-tui/: Cargo.toml
crates/monte-cardo-tui/src/: app.rs  cards.rs  game.rs  hand.rs  input.rs  lib.rs  live_widgets.rs  main.rs  main_menu_widgets.rs  players.rs  rank_count_editor.rs  settings.rs  settings_widgets.rs  solver_worker.rs  table.rs  view_model.rs
crates/monte-cardo-web/: Cargo.toml  README.md  index.html
crates/monte-cardo-web/src/: main.rs
crates/monte_cardo_core/: Cargo.toml
crates/monte_cardo_core/src/: lib.rs
crates/monte_cardo_core/src/ai/: network.rs  world.rs
crates/monte_cardo_core/src/ui/: game.rs  mod.rs
py/: enumerate_worlds.py  noise_scaling.py
scripts/: dp_generation.py  enumerate_worlds.py  evaluation.py  mass_mixing.py  mass_mixing_large_experiment.py  mass_mixing_small_experiments.py  noise_scaling.py  plot_world_generation_benchmarks.py  utils.py
smac3_output/08a56a4f5fdf6eb8c14d03298841be49/0/: configspace.json  intensifier.json  optimization.json  runhistory.json  scenario.json
smac3_output/1ea65e44ba387cf28aabe2398f193774/0/: configspace.json  intensifier.json  optimization.json  runhistory.json  scenario.json
smac3_output/7347543adde9a191becfe054343623ac/0/: configspace.json  intensifier.json  optimization.json  runhistory.json  scenario.json
smac3_output/da44a1c3b18be9645f460fed2d45b011/0/: intensifier.json  optimization.json  runhistory.json  scenario.json
src/: consts.rs  data_generation.rs  game.rs  main.rs  monte_carlo.rs  network.rs  old_main.rs
src/ai/: data_generation.rs  game.rs  mod.rs  monte_carlo.rs  puct.rs  tourney.rs  value.rs
src/ui/: cards.rs  game.rs  hand.rs  players.rs  table.rs
