[workspace]
resolver = "2"
members = [
    "crates/monte-cardo-core",
    "crates/monte-cardo-cli",
    "crates/monte-cardo-tui",
    "crates/monte-cardo-python",
    "crates/monte-cardo-web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Tanner Sims <tannersims@hesitantlyhuman.com>"]
repository = "https://github.com/HesitantlyHuman/monte-cardo"

[workspace.dependencies]
thiserror = "2"
rand = "0.10.1"
rand_distr = "0.6.0"
quick_cache = "0.6"
smallvec = "1.15"
web-time = "1"
serde = { version = "1.0.228", features = ["derive"] }
console_error_panic_hook = "0.1"
futures-channel = "0.3"
futures-util = "0.3"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.profiling]
inherits = "release"
debug = true