[package]
name = "monte-cardo-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "monte_cardo"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["abi3-py312"] }
monte-cardo-core = { path = "../monte-cardo-core" }