[package]
name = "monte-cardo-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
monte-cardo-core = { path = "../monte-cardo-core" }
rand.workspace = true
crossterm = "0.27.0"
kdam = "0.5.1"
ratatui = "0.26.2"

[profile.release]
opt-level = 3
lto = true