[package]
name = "monte-cardo-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
monte-cardo-core = { path = "../monte-cardo-core" }
rand.workspace = true
kdam = "0.5.1"
ratatui = "0.30.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.27"