[package]
name = "monte-cardo-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
monte-cardo-core = { path = "../monte-cardo-core" }
rand.workspace = true
ratatui = { version = "0.30.1", default-features = false, features = [
    "all-widgets",
    "layout-cache",
] }
serde.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.27"
ratatui = {
    version = "0.30.1",
    default-features = false,
    features = ["crossterm"]
}
kdam = "0.5.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
futures-channel.workspace = true
futures-util.workspace = true
js-sys.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true

web-sys = {
    workspace = true,
    features = [
        "DedicatedWorkerGlobalScope",
        "ErrorEvent",
        "EventTarget",
        "MessageEvent",
        "Worker",
    ],
}