[package]
name = "monte-cardo-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "monte-cardo-web"
path = "src/main.rs"

[[bin]]
name = "solver_worker"
path = "src/bin/solver_worker.rs"

[dependencies]
monte-cardo-tui = { path = "../monte-cardo-tui" }
ratzilla = "0.3.1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = {
    version = "0.3",
    features = [
        "EventTarget",
        "KeyboardEvent",
        "Window",
    ],
}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_03 = {
    package = "getrandom",
    version = "0.3.4",
    features = ["wasm_js"],
}

getrandom_04 = {
    package = "getrandom",
    version = "0.4.3",
    features = ["wasm_js"],
}