[package]
name = "monte-cardo-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
crossterm = "0.27.0"
kdam = "0.5.1"
rand = "0.10.1"
rand_distr = "0.6.0"
ratatui = "0.26.2"

[dev-dependencies]
criterion = {version = "0.8.2", features = ["html_reports"]}

[[bench]]
name = "world_generation"
harness = false